--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						const typingAnimationElement = document.getElementById('typing-animation');
 
 						// Create an array of typing text
-						const typingTexts = ['Data Analyst','Business Analyst','ML Engineer']
+						const typingTexts = ['Fresher']
 						// Create a function to display the typing animation for a given text
 						function playTypingAnimation(text) {
 						// Loop through each character and add it to the element
@@ -180,7 +180,7 @@
 						</script> 
 						<br>
 						<br>
-			            <h2>Fresher</h2>
+			            <h2>Junior Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://drive.google.com/file/d/1ue_YKMzDIYDr_DBoYZ7Jp9dDN5xVJtxj/view?usp=drive_link" class="btn btn-primary py-3 px-4">Resume</a>
